--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-body {
-  width: 100vw;
-  height: 100vh;
-}
-
 #root {
   width: 100%;
   height: 100%;
@@ -29,4 +24,8 @@ body {
   height: 30px;
   outline: 1.5px solid#604696;
   display: inline-block;
+}
+
+.acorn{
+  background-image: url('img/food.png');
 }
