--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
 .grid {
@@ -42,3 +40,9 @@
   border-radius: 50%;
   background: #9F7267;
 }
+
+img{
+  width: 100%;
+  height: 100%
+}
+
