--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
-#root {
+/* #root {
   width: 100%;
   height: 100%;
-}
+} */
 
 .App {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.margin{
+  background-color: none;
 }
 
 .grid {
@@ -41,8 +45,4 @@
   background: #9F7267;
 }
 
-img{
-  width: 100%;
-  height: 100%
-}
 
