--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,4 +1,20 @@
-img{
-    width: 100%;
-    height: 100%
-  }
+.logo{
+    background-image: url('../../img/logo7.png');
+    background-repeat: no-repeat;
+    background-position: 50% 20%
+}
+
+.puntos{
+    background-image: url('../../img/puntos3.png');
+    background-repeat: no-repeat;
+    background-position: 20% 20%
+}
+
+.margin-top{
+    margin-top: 2%
+}
+
+.header{
+    height: 15vh;
+}
+
